# my_dtrack

./: .env.example  .gitignore  GITHUB_ISSUES.md  IMPLEMENTATION_PLAN.md  README.md  justfile  manuscript.txt  migrate_config.py  pyproject.toml
dtrack/: __init__.py  cli.py  compare.py  config.py  constants.py  csv_compare.py  date_utils.py  db.py  extract.py  extract.py.backup  html_export.py  interact.py  load_map.py  loader.py  pairs.json  pipeline.py  ppt.py  stats.py  template.sas  utils_stats.py
dtrack/templates/: columns.sas  meta.sas  rows_oracle.sas
dtrack/web/: app.py
example/: col_report.html  commands.txt  manuscript.txt  pairs.json  roadmap.txt
example/csv/: aws_cust_daily_row.csv  aws_txn_monthly_col.csv
example/nbs/: 2026-03-25.txt  2026-04-23.tsv  2026-04-23.txt  databricks.txt
example/report/: bench_analysis.ipynb  bench_config.json  bench_sas.sas  effective_sql.txt  gen_ppt.py  oracle_bench.py  run_bench.sh  run_bench.txt
example/sas/: pcds_cust_daily_col.csv  pcds_cust_daily_row.csv
example/sqls/: athena_example.sql  mongodb_example.mql  oracle_example.sql  pyspark_example.sql  sas_example.sas  sqlite_example.sql  tidb_example.sql
sample_data/: customer_coldata.csv  customer_daily_aws.csv  customer_daily_pcds.csv  dtrack.conf  job-description.txt  pairs_col_config.json  pairs_config.json  unified_pairs_config.json
sample_data/issue7_gen_sas/: all_tab_columns.csv  generate_mock_data.py  pairs.json  row_report.html
sample_data/oracle_mock/: CUST_DAILY_columns.csv  TXN_MONTHLY_col.csv  TXN_MONTHLY_columns.csv
slides/: create_template.py  generate_presentation.py  ppt_config.json  present_v1.txt
testing/: config.json  generate_mock_data.py
testing/csv/: aws_acct_snap_aws_row.sql  aws_cust_log_row.sql  aws_month_summary_row.sql  aws_pos_snapshot_row.csv  aws_pos_snapshot_row.sql  aws_str_cust_daily_row.csv  aws_str_cust_daily_row.sql
testing/mock/: aws_acct_snap_aws_row.csv  aws_acct_snap_aws_row_incr.csv  aws_cust_log_row.csv  aws_cust_log_row_incr.csv  (+9 more)
tests/: __init__.py  test_compare.py  test_config.py  test_csv_compare.py  test_date_utils.py  test_date_where.py  test_db.py  test_env_loading.py  test_extract.py  test_html_export.py  test_loader.py  test_normalization.py  test_playground_history.py  test_stats.py  workflow.txt
(+38 files in other folders)
