[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["dtrack", "dtrack.platforms"]

[project]
name = "dtrack"
version = "0.1.0"
description = "Data tracking CLI for row counts and column statistics"
requires-python = ">=3.8"
dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.20.0",
    "python-dotenv>=1.0.1",
    "oracledb>=3.0.0",
]

[project.scripts]
dtrack = "dtrack.cli:main"

[project.optional-dependencies]
aws = [
    "pyathena>=2.0.0",
]
debug = [
    "ipdb>=0.13.0",
    "debugpy>=1.6.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
]
