[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dtrack"
version = "0.1.0"
description = "Data tracking CLI for row counts and column statistics"
requires-python = ">=3.11"
dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.20.0",
    "python-dotenv>=1.0.1",
    "oracledb>=3.0.0",
    "openpyxl>=3.1.5",
    "pyathena>=2.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "jinja2>=3.0.0",
    "python-multipart>=0.0.22",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "pytest-cov>=3.0.0", "ruff"]
debug = ["ipdb>=0.13.0", "debugpy>=1.6.0"]

[project.scripts]
dtrack = "dtrack.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["dtrack"]
